@@ -3,7 +3,7 @@
 # This script executes the GP2X binary with stereo AY-chip-based
 # sound support and with the screen inverted by default.
 
-./sz81 -i -a zs
+./sz81 -i -a zs > sz81log.txt
 sync
 cd /usr/gp2x
 exec ./gp2xmenu
